<resources>

    <string name="app_name">notifycation</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_notifycation">Notifycation</string>
	<string name="make_notification">generate notification</string>
    <string name="clear_notification">clear notification</string>
    <string name="notification_remote_view">set notification remote view data</string>      
    <string name="notification_brief">You have a new notify ~~~</string>  
    <string name="notification_title">srclib.huyanwei.notify</string>
    <string name="notification_context">Warning!Warning!Warning!</string>    
    <string name="baidu">baidu</string>
    <string name="google">google</string>
    <string name="again">Again</string>
    <string name="minus">-5</string>
    <string name="plus">+5</string>
    <string name="auto">animation</string>
</resources>